force-app/main/default/objects/GRV_MCDPHM__c/GRV_MCDPHM__c.object-meta.xml
<CustomObject>
    <label>GRV_MCDPHM</label>
    <nameField>
        <label>GRV_MCDPHM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GRV_MCDPHM</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>