force-app/main/default/objects/GRV_MCDPHM__c/fields/GPTYPE__c.field-meta.xml
<CustomField>
    <fullName>GPTYPE__c</fullName>
    <label>GPTYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>