force-app/main/default/objects/GRV_MCDPHM__c/fields/MCBODY__c.field-meta.xml
<CustomField>
    <fullName>MCBODY__c</fullName>
    <label>MCBODY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>