force-app/main/default/objects/GRV_MCDPHM__c/fields/MCDPHM__c.field-meta.xml
<CustomField>
    <fullName>MCDPHM__c</fullName>
    <label>MCDPHM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>