force-app/main/default/objects/GRV_MCDPHM__c/fields/MCPSGD__c.field-meta.xml
<CustomField>
    <fullName>MCPSGD__c</fullName>
    <label>MCPSGD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>