force-app/main/default/objects/GRV_MCDPHM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>MCBODY__c</columns>
    <columns>GPFACE__c</columns>
    <columns>GPTYPE__c</columns>
    <columns>MCDPHM__c</columns>
    <columns>MCPSGD__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>